--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -24,6 +24,8 @@ services:
       - db
     command: >
       sh -c "alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port 8000"
+    env_file:
+      - .env
 
 
 volumes:
