--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
-.env
+# env
+**/.env
+**/.env.*
+!.env.example
+
+# python
+**/__pycache__/
+**/*.pyc
+**/.pytest_cache/
+**/.mypy_cache/
+
+# venv
+.venv/
+venv/
+
+# node
+node_modules/
+dist/
+.next/
