--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -9,24 +9,18 @@ JWT_EXPIRES_MIN=120
 CORS_ORIGINS=
 
 # Storage (local or object)
-STORAGE_BACKEND=local
+STORAGE_BACKEND=object
 LOCAL_UPLOAD_ROOT=/data/uploads
 OBJECT_STORAGE_ENDPOINT=https://kr.object.gov-ntruss.com
-OBJECT_STORAGE_BUCKET=it-service-desk
+OBJECT_STORAGE_BUCKET=kdis-ticket
 OBJECT_STORAGE_PUBLIC_BASE_URL=
 
 # Safety: disable auto schema changes in production
 AUTO_DB_BOOTSTRAP=false
 
 # User sync from MIS DB
-SYNC_ENABLED=false
+SYNC_ENABLED=true
 SYNC_INTERVAL_SECONDS=300
 SYNC_SOURCE_DATABASE_URL=
 SYNC_SOURCE_SCHEMA=kdis
 SYNC_EMP_NO_PREFIX=3
-
-# SMTP
-SMTP_HOST=
-SMTP_PORT=25
-SMTP_FROM=
-APP_BASE_URL=http://localhost:3000
