--- a/infra/.env.example
+++ b/infra/.env.example
@@ -6,20 +6,16 @@ OBJECT_STORAGE_PUBLIC_BASE_URL=
 # Safety: disable auto schema changes in production
 AUTO_DB_BOOTSTRAP=false
 
-DATABASE_URL=
+DATABASE_URL=postgresql+psycopg://kdis_ticket:kdis3299%21@pg-1bt2s.vpc-cdb-kr.gov-ntruss.com:5432/kdis_ticket?options=-csearch_path%3Dticket
 
 SYNC_ENABLED=true
 SYNC_INTERVAL_SECONDS=300
-SYNC_SOURCE_DATABASE_URL=
+SYNC_SOURCE_DATABASE_URL=postgresql+psycopg://kdis_ticket:kdis3299%21@pg-1bt2s.vpc-cdb-kr.gov-ntruss.com:5432/misdb?options=-csearch_path%3Dkdis
 SYNC_SOURCE_SCHEMA=kdis
 SYNC_EMP_NO_PREFIX=3
 SYNC_FORCE_FULL=false
 
 SMTP_HOST=
-SMTP_PORT=
-SMTP_FROM=no-reply@kdischool.ac.kr
-
-NEXT_PUBLIC_API_BASE_URL=https://it.kdischool.ac.kr/api
-APP_BASE_URL=https://it.kdischool.ac.kr
-CORS_ORIGINS=https://it.kdischool.ac.kr
-AWS_SHARED_CREDENTIALS_DIR=/home/kdischool1/.aws
+SMTP_PORT=25
+SMTP_FROM=
+APP_BASE_URL=http://localhost:3000
