--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,8 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.90.16",
     "@floating-ui/dom": "^1.7.4",
+    "@tanstack/react-query": "^5.90.16",
     "@tiptap/extension-image": "^3.15.0",
     "@tiptap/extension-link": "^3.15.0",
     "@tiptap/extension-task-item": "^3.15.0",
@@ -23,6 +23,7 @@
     "react-dom": "19.2.3",
     "react-hook-form": "^7.69.0",
     "recharts": "^3.6.0",
+    "xlsx": "^0.18.5",
     "zod": "^4.3.4"
   },
   "devDependencies": {
