롤백후 싱크시간조정

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -20,10 +20,15 @@ AUTO_DB_BOOTSTRAP=false
 
 # User sync from MIS DB
 SYNC_ENABLED=false
-SYNC_INTERVAL_SECONDS=300
 SYNC_SOURCE_DATABASE_URL=
 SYNC_SOURCE_SCHEMA=kdis
 SYNC_EMP_NO_PREFIX=3
+# Password sync: interval in seconds (default 3600 = 1h)
+SYNC_PASSWORD_INTERVAL_SECONDS=3600
+# Profile sync (name/title/dept/email): once per day at this hour KST (default 0 = midnight)
+SYNC_FULL_AT_HOUR_KST=0
+SYNC_FULL_AT_MINUTE_KST=0
+SYNC_FORCE_FULL=false
 
 # SMTP
 SMTP_HOST=
